--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,6 +42,10 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+      - name: Network Details
+        run: |
+          netstat -na
+
       - name: Upgrade pip
         run: |
           pip install --constraint=.github/workflows/constraints.txt pip
