--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,13 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
 
+      - name: Disable IPv6
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
+          sudo sysctl -w net.ipv6.conf.default.disable_ipv6=1
+          sudo sysctl -w net.ipv6.conf.lo.disable_ipv6=1
+
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
