--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,3 +95,7 @@ filterwarnings = [
     # 3.11: Pending release of https://github.com/certifi/python-certifi/pull/199
     'ignore:path is deprecated. Use files\(\) instead.*:DeprecationWarning',
 ]
+log_cli = 1
+log_cli_level = "DEBUG"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format= "%Y-%m-%d %H:%M:%S"
