refactor: package and module changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "editor.defaultFormatter": "ms-python.python"
     },
     "cSpell.words": [
+        "awsiot",
         "awsrequest",
+        "credentialhelper",
         "httpsession",
         "mtls",
         "pkcs",
