--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -120,6 +120,12 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     needs: tests
+
+    env:
+      NOXSESSION: tests
+      FORCE_COLOR: "1"
+      PRE_COMMIT_COLOR: "always"
+
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
