--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -121,10 +121,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
 
-    env:
-      NOXSESSION: tests
-      FORCE_COLOR: "1"
-      PRE_COMMIT_COLOR: "always"
+    # env:
+    #   NOXSESSION: tests
+    #   FORCE_COLOR: "1"
+    #   PRE_COMMIT_COLOR: "always"
 
     steps:
       - name: Check out the repository
@@ -140,15 +140,15 @@ jobs:
           pip install --constraint=.github/workflows/constraints.txt pip
           pip --version
 
-      # Testing. W/O poetry fails to install
-      - name: Upgrade pip in virtual environments
-        shell: python
-        run: |
-          import os
-          import pip
+      # # Testing. W/O poetry fails to install
+      # - name: Upgrade pip in virtual environments
+      #   shell: python
+      #   run: |
+      #     import os
+      #     import pip
 
-          with open(os.environ["GITHUB_ENV"], mode="a") as io:
-              print(f"VIRTUALENV_PIP={pip.__version__}", file=io)
+      #     with open(os.environ["GITHUB_ENV"], mode="a") as io:
+      #         print(f"VIRTUALENV_PIP={pip.__version__}", file=io)
 
       - name: Install Poetry
         run: |
