--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -120,6 +120,12 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     needs: tests
+
+    # env:
+    #   NOXSESSION: tests
+    #   FORCE_COLOR: "1"
+    #   PRE_COMMIT_COLOR: "always"
+
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
@@ -134,9 +140,19 @@ jobs:
           pip install --constraint=.github/workflows/constraints.txt pip
           pip --version
 
+      # # Testing. W/O poetry fails to install
+      # - name: Upgrade pip in virtual environments
+      #   shell: python
+      #   run: |
+      #     import os
+      #     import pip
+
+      #     with open(os.environ["GITHUB_ENV"], mode="a") as io:
+      #         print(f"VIRTUALENV_PIP={pip.__version__}", file=io)
+
       - name: Install Poetry
         run: |
-          pipx install --pip-args=--constraint=.github/workflows/constraints.txt poetry
+          pipx install --pip-args=--constraint=.github/workflows/poetry-constraints.txt poetry
           poetry --version
 
       - name: Install Nox
