--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ boto3 = "^1.20.27"
 botocore = "^1.23.27"
 awscrt = "^0.16.9"
 typing-extensions = "^4.5.0"
+# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
+urllib3 = ">=1.25.4,<1.27"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
