--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ Changelog = "https://github.com/awslabs/aws-iot-core-credential-provider-session
 python = "^3.8"
 boto3 = "^1.20.27"
 botocore = "^1.23.27"
-awscrt = "^0.16.9"
+awscrt = ">=0.16.9"
 typing-extensions = "^4.5.0"
 # workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
 urllib3 = ">=1.25.4,<1.27"
