--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: Install Poetry
         run: |
+          ls .github/workflows
           pipx install --pip-args=--constraint=.github/workflows/poetry-constraints.txt poetry
           poetry --version
 
