--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,7 +35,7 @@ jobs:
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v4.1.4
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
@@ -45,6 +45,7 @@ jobs:
       - name: Upgrade pip
         run: |
           pip install --constraint=.github/workflows/constraints.txt pip
+          pip list
           pip --version
 
       - name: Upgrade pip in virtual environments
