--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,6 @@ jobs:
 
       - name: Upgrade pip
         run: |
-          pipx --version
           pip install --constraint=.github/workflows/constraints.txt pip
           pip --version
 
@@ -60,6 +59,7 @@ jobs:
       - name: Install Poetry
         run: |
           ls .github/workflows
+          pwd
           pipx install --pip-args=--constraint=.github/workflows/poetry-constraints.txt poetry
           poetry --version
 
