--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,10 @@ classifiers = [
 Changelog = "https://github.com/awslabs/aws-iot-core-credential-provider-session-helper/releases"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 boto3 = "^1.20.27"
 botocore = "^1.23.27"
-awscrt = "^0.16.9"
+awscrt = ">=0.16.9"
 typing-extensions = "^4.5.0"
 # workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
 urllib3 = ">=1.25.4,<1.27"
@@ -31,7 +31,7 @@ Pygments = ">=2.10.0"
 black = ">=21.10b0"
 coverage = {extras = ["toml"], version = ">=6.2"}
 darglint = ">=1.8.1"
-flake8 = ">=4.0.1"
+flake8 = ">=6.0.0"
 flake8-bandit = ">=2.1.2"
 flake8-bugbear = ">=21.9.2"
 flake8-docstrings = ">=1.6.0"
