--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -118,7 +118,15 @@ jobs:
         with:
           name: docs
           path: docs/_build
-
+  merge:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: coverage-data
+          pattern: coverage-data-*
   coverage:
     runs-on: ubuntu-latest
     needs: tests
@@ -167,8 +175,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: coverage-data
-          pattern: coverage-data-*
-          merge-multiple: true
 
       - name: Combine coverage data and display human readable report
         run: |
